styles/styles.css
/* ... */
b, strong {
  font-weight: bolder;
}

code, kbd, samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

dfn {
  font-style: italic;
}

mark {
  background-color: #ff0;
  color: #000;
}

small {
  font-size: 80%;
}

sub, sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -.25em;
}

sup {
  top: -.5em;
}

audio, video {
  display: inline-block;
}

audio:not([controls]) {
  display: none;
  height: 0;
}

img {
  border-style: none;
}

svg:not(:root) {
  overflow: hidden;
}

button, input, optgroup, select, textarea {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

button, input {
  overflow: visible;
}

button, select {
  text-transform: none;
}

button, html [type=button], [type=reset], [type=submit] {
  -webkit-appearance: button;
}

button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

fieldset {
  padding: .35em .75em .625em;
}

legend {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

progress {
  display: inline-block;
  vertical-align: baseline;
}

textarea {
  overflow: auto;
}

[type=checkbox], [type=radio] {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  padding: 0;
}

[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
  height: auto;
}

[type=search] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

[type=search]::-webkit-search-cancel-button, [type=search]::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

details, menu {
  display: block;
}

summary {
  display: list-item;
}

canvas {
  display: inline-block;
}

template {
  display: none;
}

[hidden] {
  display: none;
}

.clearfix:after {
  visibility: hidden;
  display: block;
  font-size: 0;
  content: '';
  clear: both;
  height: 0;
}

html {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

*, *:before, *:after {
  -webkit-box-sizing: inherit;
          box-sizing: inherit;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  -webkit-clip-path: inset(100%);
          clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

/* GENERIC OVERRIDES */
body,
ul,
li,
h1,
h2,
h3,
button,
p {
  margin: 0;
  padding: 0;
}

/* default font size and smooth scrolling - DON'T CHANGE */
html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}

ul {
  list-style: none;
}

button {
  border: none;
  background-color: inherit;
  font-family: inherit;
  color: inherit;
}

a {
  color: #30bbdd;
  text-decoration: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

a:hover, a:focus {
  border-bottom: 1px solid #30bbdd;
}

input,
fieldset {
  border: none;
}

.wrapper {
  max-width: 1200px;
  width: 80%;
  margin: 0 auto;
}

@media (max-width: 768px) {
  .wrapper {
    width: 90%;
  }
}

body {
  min-width: 350px;
  font-size: 1.6rem;
  font-family: 'Source Sans Pro', sans-serif;
  line-height: 2.2rem;
  color: #333333;
}

header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  color: white;
  height: 400px;
  width: 100%;
  padding: 20px 0;
  background-image: url("./../assets/black-textile-41949.jpg");
  background-size: cover;
  background-position: center;
}

header p, header a {
  font-size: 2.2rem;
  line-height: 2.6rem;
  letter-spacing: 1px;
  margin-top: 15px;
}

.heading {
  -webkit-box-flex: 90%;
      -ms-flex: 90%;
          flex: 90%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

nav {
  -webkit-box-flex: 10%;
      -ms-flex: 10%;
          flex: 10%;
  display: block;
  width: 100%;
  justify-self: flex-start;
  -ms-flex-item-align: start;
      align-self: flex-start;
}

nav ul {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  text-align: center;
}

nav ul li {
  padding: 5px;
  margin: 10px;
}

nav ul a {
  color: white;
  text-decoration: none;
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(65%, rgba(255, 255, 255, 0)), color-stop(35%, #30bbdd));
  background-image: linear-gradient(rgba(255, 255, 255, 0) 65%, #30bbdd 35%);
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
}

nav ul a:hover {
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(65%, rgba(255, 255, 255, 0)), color-stop(35%, #5562b6));
  background-image: linear-gradient(rgba(255, 255, 255, 0) 65%, #5562b6 35%);
}

nav ul a:hover, nav ul a:focus {
  border-bottom: none;
}

.mobile-menu {
  font-size: 2.6rem;
  height: 0;
  position: absolute;
  top: 20px;
  right: 25px;
  cursor: pointer;
  overflow: hidden;
}

.mobile-menu + input {
  display: none;
}

.positionFixed {
  position: fixed;
}

.showMenu {
  right: 0px;
}
/* ... */

